# azercell_mlops

./: --  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-build.yaml
backend/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  app.py
models/: model.pkl
notebooks/: javidan-nuriyev-eda.py  javidan-nuriyev-fe1.py  javidan-nuriyev-fe2.py  javidan-nuriyev-trainmodel.py
src/models/: predict_model.py  train_model.py
